--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "truffle": "^5.8.1"
   }
 }
